--- a/website/blog/2024-09-08-welcome.md
+++ b/website/blog/2024-09-08-welcome.md
@@ -2,7 +2,9 @@
 slug: welcome
 title: Welcome
 authors: [xerial]
-tags: [wvlet]
+tags: [tech]
 ---
 
 Welcome to wvlet.org. This is a place where we share our thoughts, ideas, and projects.
+
+<!-- truncate -->
